--- a/ListaTarefas/index.css
+++ b/ListaTarefas/index.css
@@ -10,7 +10,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 100%;
     background: #e9e8e8;
     border-radius: 15px;
 }
@@ -18,6 +18,8 @@ body {
 .container {
     text-align: center;
     width: 50vw;
+    max-width: 800px;
+    min-width: 300px;
     background: #866969;
     margin: 0 auto;
     border-radius: 8px;
@@ -64,10 +66,15 @@ li {
     font-size: 20px;
     margin-bottom: 10px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
     
 }
+
+li span {
+    flex-grow: 1;
+    margin-right: 10px;
+  }
+  
 
 button {
     background-color: #ff6b6b;
@@ -77,17 +84,20 @@ button {
     color: white;
     border-radius: 5px;
     cursor: pointer;
-}
+    margin-left: 10px;
+  }
+  
 
 button:hover {
-    background-color: #ff4e4e;
+    background-color: #157711;
 }
 
 .btn {
     display: flex;
     justify-content: space-around;
-    width: 80%;
+    width: 100%;
     margin-top: 2%;
+
 }
 
 .btnAdd {
@@ -97,3 +107,11 @@ button:hover {
 .btnRemoveAll {
     background-color: rgb(170, 0, 0);
 }
+
+
+@media (max-width: 600px) {
+    .container {
+      width: 90vw;
+    }
+  }
+  
